# DirectoryMonitor

./: CMakeLists.txt  README.md  directoryConf
include/: CleanUpPolicy.h  ConfParser.h  DeletePolicy.h  DirCleanUpPolicy.h  DirControlPolicy.h  DirectoryPolicy.h  Path.h
src/: CleanUpPolicy.cpp  DeletePolicy.cpp  DirCleanUpPolicy.cpp  DirControlPolicy.cpp  DirectoryPolicy.cpp  Path.cpp  main.cpp
tests/: CMakeLists.txt  CleanUpPolicyTest.cpp  DeletePolicyTest.cpp  DirectoryPolicyTest.cpp  PathTest.cpp  UTestDeletePolicy.cpp  UTestDirectoryPolicy.cpp
